@@ -130,8 +130,8 @@ tasks.register("installGitHooks", Copy) {
   dependsOn("installPrekGitHook")
   description = "Copies git hooks to the local git hooks directory"
   from(files("checker/bin-devel/git.pre-commit"))
-  rename("git\\.(.*)", "\$1.legacy")
   into(localHooksDir)
+  rename("git\\.pre-commit", "pre-commit.legacy")
 }
 tasks.register("installPrekGitHook", Exec) {
   // `prek install` is idempotent, so it is harmless to run it on every build.
@@ -1028,11 +1028,7 @@ subprojects {
           "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
         ]
         args += [
-          // checker/jtreg/nullness/defaultsPersist/ReferenceInfoUtil.java
-          // uses the jdk.jdeps module.
-          "-javacoptions:--add-modules jdk.jdeps",
-          "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
-          "-vmoptions:--add-opens=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+          // checker/jtreg/nullness/PersistUtil.java uses the jdk.compiler module.
           "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
           "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
           "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
